# Inferonix

./: CMakeLists.txt  deps.cmake
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  main.cpp
src/EventSystem/: event.hpp  event_handler.hpp  event_listener.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
src/Game/: CMakeLists.txt  game.cpp  game.hpp
src/Input/: input.cpp  input.hpp  key_codes.hpp  mouse_codes.hpp
src/Interface/: application.cpp  application.hpp  callback_functions.cpp  callback_functions.hpp  main.hpp  window.cpp  window.hpp
src/Interface/Window/: window.cpp  window.hpp
src/Renderer/: buffer.hpp  index_buffer.cpp  render_entity.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  transform.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp
src/Scene/: camera.hpp
src/UI/: ui_manager.cpp  ui_manager.hpp
src/UI/Panels/: main_panel.cpp  main_panel.hpp  panel.hpp
src/Window/: callbacks.cpp  window.cpp  window.hpp
